--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "genetic": "^0.3.1",
     "genetic-js": "^0.1.14",
     "genetic-js-no-ww": "^0.2.1",
+    "geneticalgorithm": "^1.0.2",
     "line-by-line": "^0.1.6"
   }
 }
